@@ -1,3 +1,11 @@
+6322.	[security]	Specific DNS answers could cause a denial-of-service
+			condition due to DNS validation taking a long time.
+			(CVE-2023-50387) [GL #4424]
+
+			The same code change also addresses another problem:
+			preparing NSEC3 closest encloser proofs could exhaust
+			available CPU resources. (CVE-2023-50868) [GL #4459]
+
 6315.	[security]	Speed up parsing of DNS messages with many different
 			names. (CVE-2023-4408) [GL #4234]
 
